--- a/html/Welcome_Page.html
+++ b/html/Welcome_Page.html
@@ -2,7 +2,7 @@
 <html lang="en">
     
 <head>
-<link rel="stylesheet" href="C:\wamp64\www\MIU_Web_Project\css\Welcome_Page.css">
+<link rel="stylesheet" href="../css/Welcome_Page.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!--Bootstrap Links-->
 <meta charset="utf-8">
@@ -16,7 +16,7 @@
    <!-- <h1>Little Kids Nursery</h1>-->
 <div class="topnav">
     <a href="../php/logIn.php"> <span>Login</span></a>
-    <a href="C:\wamp64\www\MIU_Web_Project\php\Registration1.php"><span>Sign Up</span></a>
+    <a href="../php/Registration1.php"><span>Sign Up</span></a>
 </div>
 
 
