Registration css and php

--- a/html/Welcome_Page.html
+++ b/html/Welcome_Page.html
@@ -11,12 +11,17 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  
 </head>
+
+
 <body>
+
+
    <!-- <h1>Little Kids Nursery</h1>-->
 <div class="topnav">
     <a href="../php/logIn.php"> <span>Login</span></a>
-    <a href="../php/Registration1.php"><span>Sign Up</span></a>
+    <a href="../php/registration.php"><span>Sign Up</span></a>
 </div>
 
 
