--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="../css/Welcome_Page.css">
+    <link rel="stylesheet" href="../css/AboutUs.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
    
@@ -36,12 +36,13 @@
                 <span>Our Team</span>
             </button>
         </div>
-        <div class="Left_Bar">
-
-        </div>
     </div>
 
-    <div class="Rest_Of_Page">
+    <div class="Schedules">
+        <h1> <i> This is sample of our kids Schedules </i> </h1>
+        <p> <i> This is how our kids spent their day in our Nursery </i><br>
+        </p>
+        <img id="Image_Options" src="../pictures/Schedule.PNG" alt="Manager Picture"width="1100" height="550" > 
 
     </div>
 
