--- a/html/Branches.html
+++ b/html/Branches.html
@@ -2,14 +2,13 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="../css/Welcome_Page.css">
+    <link rel="stylesheet" href="../css/Branches.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   
+   <title> Nursery Branches </title>
 </head>
 
 <body>
-    <!-- <h1>Little Kids Nursery</h1>-->
     <div class="topnav">
         <a href="../php/logIn.php"> <span>Login</span></a>
         <a href="../php/registration.php"><span>Sign Up</span></a>
@@ -34,18 +33,36 @@
                    <span>Our Team</span>
                </button>
         </div>
-        <div class="Left_Bar">
+    </div>
 
+    <div class="Middle_Of_Page">
+            <h1> <i>Our Nursery Branches :</i></h1> <!--title-->
+            <h2> <i>  Maadi Branch : </i></h2> <!--subtitle -->
+            <p> 25 Nada Tower - 6th-El zahraa St. - after Kuwaiti mosque - Zahraa Elmaadi <br><br>
+                <b> Telephone : 0225196542. </b> <br>
+               <b> Mobile : 01097745933. </b>  <br>
+            </p>
+
+            <h2> <i>New Cairo Branch : </i></h2> <!--subtitle -->
+            <p>  Villa 260 - 34 St. - in front of Al Shuwaifat School - 5th District - 4th Zone
+                Cairo - New Cairo - Fifth Settlement <br><br>
+                <b> Telephone : 0222641100. </b><br>
+                <b> Mobile : 01220000035. </b><br>
+            </p>
+
+            <h2> <i> Nasr City Branch : </i></h2> <!--subtitle -->
+            <p>  Villa 4 Al Nedal St off Mohamed Mandour behind KFC Al Tayaran - Al Tayaran St. - Rabea Al Adawiya
+                Cairo - Nasr City  <br><br>
+                <b> Telephone : 0224176681. </b><br>
+               <b> Mobile : 01114566588. </b><br>
+            </p>
+    
         </div>
-    </div>
-
-    <div class="Rest_Of_Page">
-
-    </div>
+    
 
     <div class="Footer">
-        <a href="#" class="fa fa-facebook"></a>
         <!--Social media button classes-->
+        <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-youtube"></a>
         <a href="#" class="fa fa-instagram"></a>
     </div>
