--- a/html/ContactUs.html
+++ b/html/ContactUs.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="../css/Welcome_Page.css">
+    <link rel="stylesheet" href="../css/ContactUs.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title> Nursery Contacting Information </title>
 </head>
 
 <body>
-    <!-- <h1>Little Kids Nursery</h1>-->
     <div class="topnav">
         <a href="../php/logIn.php"> <span>Login</span></a>
         <a href="../php/registration.php"><span>Sign Up</span></a>
@@ -33,18 +33,54 @@
                    <span>Our Team</span>
                </button>
         </div>
-        <div class="Left_Bar">
+    </div>
 
+    <div class="Manager_Div">
+            <h1> <i></i></h1> <!--title-->
+            <p>
+
+            </p>    
         </div>
-    </div>
 
-    <div class="Rest_Of_Page">
+        <div class="Teacher1_Div">
+            <h1> <i></i></h1> <!--title-->
+            <p>
 
-    </div>
+            </p>    
+        </div>
+
+        <div class="Teacher2_Div">
+            <h1> <i></i></h1> <!--title-->
+            <p>
+
+            </p>    
+        </div>
+
+        <div class="Manager_Div">
+            <h1> <i></i></h1> <!--title-->
+            <p>
+
+            </p>    
+        </div>
+
+        <div class="Teacher1_Div">
+            <h1> <i></i></h1> <!--title-->
+            <p>
+
+            </p>    
+        </div>
+
+        <div class="Teacher2_Div">
+            <h1> <i></i></h1> <!--title-->
+            <p>
+
+            </p>    
+        </div>
+    
 
     <div class="Footer">
-        <a href="#" class="fa fa-facebook"></a>
         <!--Social media button classes-->
+        <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-youtube"></a>
         <a href="#" class="fa fa-instagram"></a>
     </div>
