--- a/html/Welcome_Page.html
+++ b/html/Welcome_Page.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <?php
+    ?>
     <!-- <h1>Little Kids Nursery</h1>-->
     <div class="topnav">
         <a href="../php/logIn.php"> <span>Login</span></a>
