--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -5,11 +5,10 @@
     <link rel="stylesheet" href="../css/AboutUs.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   
+    <title> Nursery </title>
 </head>
 
 <body>
-    <!-- <h1>Little Kids Nursery</h1>-->
     <div class="topnav">
         <a href="../php/logIn.php"> <span>Login</span></a>
         <a href="../php/registration.php"><span>Sign Up</span></a>
@@ -51,8 +50,8 @@
     </div>
 
     <div class="Footer">
-        <a href="#" class="fa fa-facebook"></a>
         <!--Social media button classes-->
+        <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-youtube"></a>
         <a href="#" class="fa fa-instagram"></a>
     </div>
