--- a/html/ContactUs.html
+++ b/html/ContactUs.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/ContactUs.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title> Nursery Contacting Information </title>
+    <title> Nursery </title>
 </head>
 
 <body>
@@ -38,49 +38,9 @@
            </button>
         </div>
     </div>
-
-    <div class="Manager_Div">
-            <h1> <i></i></h1> <!--title-->
-            <p>
-
-            </p>    
-        </div>
-
-        <div class="Teacher1_Div">
-            <h1> <i></i></h1> <!--title-->
-            <p>
-
-            </p>    
-        </div>
-
-        <div class="Teacher2_Div">
-            <h1> <i></i></h1> <!--title-->
-            <p>
-
-            </p>    
-        </div>
-
-        <div class="Manager_Div">
-            <h1> <i></i></h1> <!--title-->
-            <p>
-
-            </p>    
-        </div>
-
-        <div class="Teacher1_Div">
-            <h1> <i></i></h1> <!--title-->
-            <p>
-
-            </p>    
-        </div>
-
-        <div class="Teacher2_Div">
-            <h1> <i></i></h1> <!--title-->
-            <p>
-
-            </p>    
-        </div>
+<div class="Middle_Of_Page">
     
+</div>
 
     <div class="Footer">
         <!--Social media button classes-->
