--- a/html/OurTeam.html
+++ b/html/OurTeam.html
@@ -12,6 +12,7 @@
     <div class="topnav">
         <a href="../php/logIn.php"> <span>Login</span></a>
         <a href="../php/registration.php"><span>Sign Up</span></a>
+        <title> Nursery </title>
     </div>
 
 
@@ -42,7 +43,7 @@
     
     <div class="Manager_Div">
         <h1> <i>Our Manager </i></h1> <!--title-->
-        <p>Name : <br>
+        <p>Name : Liza Makram  <br>
             Target : <br> <br>
               Contact Manager : <br>
 
@@ -53,9 +54,9 @@
 
     <div class="Teacher1_Div">
         <h1> <i> Our English Teacher </i></h1> <!--title-->
-        <p>Name : <br>
-            Target : <br>
-            Contact Teacher : <br>
+        <p>Name : Nadia Mohamed Ahmed <br>
+        Target : <br>
+        Contact Teacher : <br>
 
         </p>
         <img id="Image_Options" src="../pictures/Teacher1.jpg" alt="Manager Picture" width="150" height="200" > 
@@ -64,9 +65,9 @@
 
     <div class="Teacher2_Div">
         <h1> <i> Our French Teacher </i></h1> <!--title-->
-        <p>Name : <br>
-            Target : <br>
-            Contact Teacher : <br>
+        <p>Name : Sophia Martinez <br>
+        Target : <br>
+        Contact Teacher : <br>
 
         </p>
         <img id="Image_Options" src="../pictures/Teacher2.jpg" alt="Manager Picture" width="180" height="200"> 
@@ -75,9 +76,9 @@
 
     <div class="Teacher3_Div">
         <h1> <i> Our Arabic Teacher </i></h1> <!--title-->
-        <p>Name : <br>
-            Target : <br>
-            Contact Teacher : <br>
+        <p>Name : Hassan Mohamed Ibrahim <br>
+        Target : <br>
+        Contact Teacher : <br>
 
         </p>
         <img id="Image_Options" src="../pictures/Teacher3.jpg" alt="Manager Picture"width="150" height="200" > 
@@ -86,9 +87,9 @@
 
     <div class="Teacher4_Div">
         <h1> <i> Our Science Teacher </i></h1> <!--title-->
-        <p>Name : <br>
-            Target : <br>
-            Contact Teacher : <br>
+        <p>Name : Sherin Khaled Gamil  <br>
+        Target : <br>
+        Contact Teacher : <br>
 
         </p>
         <img id="Image_Options" src="../pictures/Teacher4.jpg" alt="Manager Picture"width="200" height="200" > 
@@ -98,8 +99,8 @@
     <div class="Teacher5_Div">
         <h1> <i> Our Math Teacher </i></h1> <!--title-->
         <p>Name : <br>
-            Target : <br>
-            Contact Teacher : <br>
+        Target : <br>
+        Contact Teacher : <br>
 
         </p>
         <img id="Image_Options" src="../pictures/Teacher5.jpg" alt="Manager Picture"width="200" height="200" > 
@@ -109,8 +110,8 @@
     <div class="Doctor_Div">
         <h1> <i>Our Doctor </i></h1> <!--title-->
         <p>Name : <br>
-            Target : <br>
-            Contact Doctor : <br>
+        Target : <br>
+        Contact Doctor : <br>
 
         </p>
          <img id="Image_Options" src="../pictures/Doctor.jpg" alt="Manager Picture"width="200" height="200" > 
@@ -118,8 +119,8 @@
     </div>
 
     <div class="Footer">
+            <!--Social media button classes-->
         <a href="#" class="fa fa-facebook"></a>
-        <!--Social media button classes-->
         <a href="#" class="fa fa-youtube"></a>
         <a href="#" class="fa fa-instagram"></a>
     </div>
