--- a/html/Welcome_Page.html
+++ b/html/Welcome_Page.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-    <?php
-    ?>
+    Nagy Was Here
     <!-- <h1>Little Kids Nursery</h1>-->
     <div class="topnav">
         <a href="../php/logIn.php"> <span>Login</span></a>
