sidebar in welcome page

--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -19,7 +19,7 @@
         <div class="Buttons">
             <!-- <span> deh 3chn t2bal eleffects 3leha bt3et el arrow-->
            
-                <button id="Home_Button" onclick="window.location.href='../html/Welcome_Page.html'">
+                <button id="Home_Button" onclick="window.location.href='../html/Welcome_Page.php'">
                     <span>Home</span>
                </button>      
                
