--- a/html/OurTeam.html
+++ b/html/OurTeam.html
@@ -18,7 +18,7 @@
 
     <div class="Header">
         <div class="Buttons">
-            <button id="Home_Button" onclick="window.location.href='../html/Welcome_Page.html'">
+            <button id="Home_Button" onclick="window.location.href='../html/Welcome_Page.php'">
                 <span>Home</span>
            </button>      
            
